# meridian_expert

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: bundle_registry.yaml  compatibility_manifest.yaml  lifecycle_modes.yaml  model_profiles.yaml  repos.example.yaml  surface_dependency_registry.yaml  task_family_policies.yaml
demo/: 01_workspace_setup.ipynb  02_theory_task_walkthrough.ipynb  03_usage_task_walkthrough.ipynb  04_update_risk_walkthrough.ipynb  05_review_learning_and_follow_on.ipynb
demo/tasks/clarification_ambiguous_scope/: task.md
demo/tasks/follow_on_from_seed/: task.md
demo/tasks/theory_adstock/: task.md
demo/tasks/theory_model_orchestrator/: task.md
docs/: architecture.md  bundles-and-compatibility.md  cli-guide.md  demos-and-notebooks.md  model-routing-and-openai.md  review-learning-and-exemplars.md  runtime-taxonomy.md  task-lifecycle.md  workspace-and-paths.md
src/meridian_expert/: cli.py  enums.py  ids.py  logging_utils.py  settings.py
tests/golden_tasks/: README.md
tests/integration/: test_cli_phase11.py  test_cli_smoke.py
tests/unit/: test_artifact_paths.py  test_bundle_registry.py  test_compatibility_checker.py  test_evidence_builder.py  test_golden_harness.py  test_ids.py  test_llm_client.py  test_repo_graph.py  test_repo_reader.py  test_repositories.py  test_runner.py  test_settings_paths.py  test_signatures.py  test_sqlite_artifacts.py  test_state_machine.py  test_surface_registry.py  test_theory_reviewer_formatter.py  test_triage.py  test_updates_family.py  test_usage_family.py  test_workspace.py
(+77 files in other folders)
